[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzo"
version = "0.2.9"
description = "LLM Project testing"
authors = [
    {name = "Alamsyah Hanza", email = "alamhanz@gmail.com"}
]
dependencies = [
    "together==1.3.3",
    "python-dotenv==1.0.1",
    "langchain-together==0.2.0",
    "langchain==0.3.7",
    "langchain-community==0.3.5",
    "faiss-cpu==1.9.0",
    "chromadb==0.5.18",
    "colorlog==6.9.0",
    "langchain-chroma==0.1.4",
    "google-cloud-storage==2.18.2",
    "httpx==0.27.2"
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
readme = "README.md"
keywords = ["LLM", "AI", "machine learning"]
urls = {"Homepage" = "https://alamhanz.xyz"}

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
packages = ["hanzo"]
