[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzo"
version = "0.2.10"
description = "LLM Sandbox for bot."
authors = [
    {name = "Alamsyah Hanza", email = "alamhanz@gmail.com"},
    {name = "alamhanz", email = "alamhanz@gmail.com"},
]
dependencies = [
    "together==1.3.3",
    "langchain==0.3.7",
    "faiss-cpu==1.9.0",
    "chromadb==0.5.18",
    "httpx==0.27.2",
    "langchain-community>=0.3.7",
    "langchain-together>=0.3.0",
    "color-log>=1.0.9",
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
readme = "README.md"
keywords = ["LLM", "AI", "machine learning"]
urls = {"Homepage" = "https://alamhanz.xyz"}

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
"hanzo" = ["**/*"]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=6.0",
    "python-dotenv==1.0.1",
    "google-cloud-storage==2.18.2"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]