[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzo"
version = "0.3.0"
description = "LLM Sandbox for personal use."
authors = [
    {name = "Alamsyah Hanza", email = "alamhanz@gmail.com"},
    {name = "alamhanz", email = "alamhanz@gmail.com"},
]
dependencies = [
    "together==1.5.3",
    "crewai>=0.108.0",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.20",
    "langchain-together>=0.3.0",
    "colorlog>=6.9.0"
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = "<3.13,>=3.10"
readme = "README.md"
keywords = ["LLM", "AI", "machine learning"]
urls = {"Homepage" = "https://alamhanz.xyz"}

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
"hanzo" = ["**/*"]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=6.0",
    "google-cloud-storage==2.18.2"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]